--- a/experiments/HD209_Barstow_2020_setup/retrieval_config.yaml
+++ b/experiments/HD209_Barstow_2020_setup/retrieval_config.yaml
@@ -1,31 +1,32 @@
 obs:
 
-  path: ../obs_data/HD209458b_transmission_Sing2016_tagged.txt
+  path: ../obs_data/HD209458b_transmission_Sing2016.txt
 
 physics:
 
-  nlay: 199
+  nlay: 99
 
   vert_struct: Barstow
   vert_chem: None
   vert_cloud: None
 
-  opac_line: lbl
-  opac_ray: lbl
-  opac_cia: lbl
-  opac_cloud: F18
+  opac_line: ck
+  opac_ray: ck
+  opac_cia: ck
+  opac_cloud: None
 
   rt_scheme: transit_1d
 
 opac:
 
-  wl_master: wl_dnu_1.txt
-  full_grid: False
+  wl_master: wl_petitradtrans_R1000.txt
+  full_grid: True
+  ck: True
 
   line:
-    - {species: H2O, path: ../opac_data/lbl/H2O_dnu_1.npz}
-    - {species: Na, path: ../opac_data/lbl/Na_dnu_1.npz}
-    - {species: K, path: ../opac_data/lbl/K_dnu_1.npz}
+    - {species: H2O, path: ../opac_data/ck/1H2-16O__POKAZATEL__R1000_0.3-50mu.ktable.petitRADTRANS.h5}
+    #- {species: Na, path: ../opac_data/ck/23Na__Kurucz-Na.R1000_0.3-50mu.ktable.petitRADTRANS.h5}
+    #- {species: K, path: ../opac_data/ck/39K__Kurucz-K.R1000_0.3-50mu.ktable.petitRADTRANS.h5}
   ray:
     - {species: H2}
     - {species: He}
@@ -37,29 +38,30 @@ opac:
 params:
 
   - { name: R_s,   dist: delta,   value: 1.18655, transform: identity, init: 1.18655}
-  - { name: p_bot, dist: delta,   value: 100.0,  transform: identity, init: 100.0 }
-  - { name: p_top, dist: delta,   value: 1e-8, transform: identity, init: 1e-8}
-    
+  - { name: p_bot, dist: delta,   value: 10.0,  transform: identity, init: 10.0 }
+  - { name: p_top, dist: delta,   value: 1e-5, transform: identity, init: 1e-5}
+  - { name: log_g, dist: delta,   value: 3.0, transform: identity, init: 3.0}
+  #- { name: log_g, dist: uniform, low: 2.9,   high: 3.3,  transform: logit, init: 3.0}
 
-  - { name: log_g, dist: uniform, low: 2.9,   high: 3.3,  transform: logit, init: 3.0}
   - { name: R_p, dist: uniform, low: 1.1,   high: 1.5,  transform: logit, init: 1.4}
   - { name: T_iso, dist: uniform, low: 100.0,   high: 3000.0, transform: logit, init: 1500.0 }
 
-  - { name: f_cloud, dist: uniform, low: 0.0,   high: 1.0, transform: logit, init: 0.5}
+  
 
   - { name: f_H2O, dist: log_uniform, low: 1e-8,   high: 1e-2,  transform: log, init: 1e-5}
-  - { name: f_Na, dist: log_uniform, low: 1e-13,   high: 1e-3,  transform: log, init: 1e-6}
-  - { name: f_K, dist: log_uniform, low: 1e-13,   high: 1e-3,  transform: log, init: 1e-6}
+  #- { name: f_Na, dist: log_uniform, low: 1e-13,   high: 1e-3,  transform: log, init: 1e-6}
+  #- { name: f_K, dist: log_uniform, low: 1e-13,   high: 1e-3,  transform: log, init: 1e-6}
 
-  - { name: cld_r, dist: log_uniform, low: 1e-3,   high: 1e+2,  transform: log, init: 1e0}
-  - { name: cld_Q0, dist: uniform, low: 0.1,   high: 65,  transform: logit, init: 30.0}
-  - { name: cld_a, dist: uniform, low: 3.0,   high: 7.0,  transform: logit, init: 4.0}
-  - { name: cld_k0, dist: log_uniform, low: 1e-13,   high: 1e+13,  transform: log, init: 1e0}
+  # - { name: f_cloud, dist: uniform, low: 0.0,   high: 1.0, transform: logit, init: 0.5}
+  # - { name: cld_r, dist: log_uniform, low: 1e-3,   high: 1e+2,  transform: log, init: 1e0}
+  # - { name: cld_Q0, dist: uniform, low: 0.1,   high: 65,  transform: logit, init: 30.0}
+  # - { name: cld_a, dist: uniform, low: 3.0,   high: 7.0,  transform: logit, init: 4.0}
+  # - { name: cld_k0, dist: log_uniform, low: 1e-13,   high: 1e+13,  transform: log, init: 1e0}
 
 
 sampling:
 
-  engine: jaxns
+  engine: nuts
 
   nuts:
     backend: numpyro
@@ -130,6 +132,6 @@ sampling:
       atol: null
 
 runtime:
-  platform: gpu           # cpu | gpu | cuda | metal
+  platform: cpu           # cpu | gpu | cuda | metal
   cuda_visible_devices: 1  # or "0,1"
   threads: 1
