--- a/experiments/WASP-17b_JWST_setup/retrieval_config.yaml
+++ b/experiments/WASP-17b_JWST_setup/retrieval_config.yaml
@@ -21,18 +21,11 @@ opac:
 
   wl_master: wl_taurex_R15000.txt
   full_grid: False
+  ck: False
 
   line:
-    # NPZ format (old)
-    # - {species: H2O, path: ../opac_data/lbl/H2O_dnu_1.npz}
-    # - {species: CO2, path: ../opac_data/lbl/CO2_dnu_1.npz}
-    # - {species: CO, path: ../opac_data/lbl/CO_dnu_1.npz}
-    # - {species: CH4, path: ../opac_data/lbl/CH4_dnu_1.npz}
-    # - {species: K, path: ../opac_data/lbl/K_dnu_1.npz}
-
-    # TauREx HDF5 format (new)
     - {species: H2O, path: ../opac_data/lbl/1H2-16O__POKAZATEL__R15000_0.3-50mu.xsec.TauREx.h5}
-    - {species: CO2, path: ../opac_data/lbl/12C-16O2__Dozen.R15000_0.3-50mu.xsec.TauREx.h5}
+    - {species: CO2, path: ../opac_data/lbl/12C-16O2__UCL-4000.R15000_0.3-50mu.xsec.TauREx.h5}
     - {species: CO, path: ../opac_data/lbl/12C-16O__Li2015.R15000_0.3-50mu.xsec.TauREx.h5}
     - {species: CH4, path: ../opac_data/lbl/12C-1H4__MM.R15000_0.3-50mu.xsec.TauREx.h5}
     - {species: K, path: ../opac_data/lbl/39K__Kurucz-K.R15000_0.3-50mu.xsec.TauREx.h5}
