--- a/experiments/HD209_Barstow_2020_setup/retrieval_config.yaml
+++ b/experiments/HD209_Barstow_2020_setup/retrieval_config.yaml
@@ -36,8 +36,8 @@ opac:
    #   - {species: K, path: ../opac_data/lbl/39K__Kurucz-K.R15000_0.3-50mu.xsec.TauREx.h5} 
 
     - {species: H2O, path: ../opac_data/lbl/H2O_dnu_1.npz}
-    - {species: Na, path: ../opac_data/lbl/Na_dnu_1.npz}
-    - {species: K, path: ../opac_data/lbl/K_dnu_1.npz}
+    #- {species: Na, path: ../opac_data/lbl/Na_dnu_1.npz}
+   #- {species: K, path: ../opac_data/lbl/K_dnu_1.npz}
 
   ray:
     - {species: H2}
@@ -59,8 +59,8 @@ params:
   - { name: T_iso, dist: uniform, low: 100.0,   high: 3000.0, transform: logit, init: 1500.0 }
 
   - { name: log_10_f_H2O, dist: uniform, low: -8,   high: -2,  transform: logit, init: -5}
-  - { name: log_10_f_Na, dist: uniform, low: -13,   high: -3,  transform: logit, init: -6}
-  - { name: log_10_f_K, dist: uniform, low: -13,   high: -3,  transform: logit, init: -6}
+  #- { name: log_10_f_Na, dist: uniform, low: -13,   high: -3,  transform: logit, init: -6}
+  #- { name: log_10_f_K, dist: uniform, low: -13,   high: -3,  transform: logit, init: -6}
 
   # - { name: f_cloud, dist: uniform, low: 0.0,   high: 1.0, transform: logit, init: 0.5}
   # - { name: log_10_cld_r, dist: uniform, low: -3,   high: 2,  transform: logit, init: 0}
@@ -71,7 +71,7 @@ params:
 
 sampling:
 
-  engine: nuts
+  engine: blackjax_ns
 
   nuts:
     backend: numpyro
@@ -112,34 +112,12 @@ sampling:
     posterior_samples: 10000           # equal-weight posterior draws
     seed: 42                          # RNG seed for JAX
 
-  numpyro_ns:
-    # --- bookkeeping ---
-    seed: 43
-    posterior_samples: 4000
-
-    # --- constructor args forwarded to numpyro.contrib.nested_sampling.NestedSampler ---
-    num_live_points: 100
-    max_samples: 150000
-    constructor_kwargs:
-      difficult_model: false
-      parameter_estimation: true
-      s: 5
-      k: 0
-      c: null
-      shell_fraction: 0.5
-      gradient_guided: false
-      init_efficiency_threshold: 0.1
-      verbose: true
-
-    # --- stopping criteria (mirrors jaxns TerminationCondition) ---
-    termination:
-      ess: 400
-      evidence_uncert: 0.1
-      dlogZ: 0.1
-      max_samples: 150000
-      max_num_likelihood_evaluations: null
-      rtol: null
-      atol: null
+  blackjax_ns:
+    num_live_points: 200
+    num_inner_steps: 5
+    num_delete: 20
+    dlogz_stop: 1.0
+    seed: 42
 
 runtime:
   platform: cpu           # cpu | gpu | cuda | metal
