--- a/experiments/HD209_Barstow_2020_setup/retrieval_config.yaml
+++ b/experiments/HD209_Barstow_2020_setup/retrieval_config.yaml
@@ -7,37 +7,35 @@ physics:
   nlay: 99
 
   vert_Tp: Barstow
-  vert_alt: variable_g
+  vert_alt: p_ref
   vert_chem: constant_vmr
   vert_mu: dynamic
-
 
   opac_line: lbl
   opac_ray: lbl
   opac_cia: lbl
-  opac_cloud: None
+  opac_cloud: F18
 
   rt_scheme: transit_1d
 
 opac:
 
-  #wl_master: wl_petitradtrans_R1000.txt
-  #wl_master: wl_taurex_R15000.txt
   wl_master: wl_dnu_1.txt
+  #wl_master: wl_petitradtrans_R1000.txt
+  #wl_master: wl_taurex_R15000.txt 
   full_grid: False
   ck: False
 
   line:
-    #- {species: H2O, path: ../opac_data/ck/1H2-16O__POKAZATEL__R1000_0.3-50mu.ktable.petitRADTRANS.h5}
-    #- {species: Na, path: ../opac_data/ck/23Na__Kurucz-Na.R1000_0.3-50mu.ktable.petitRADTRANS.h5}
-    #- {species: K, path: ../opac_data/ck/39K__Kurucz-K.R1000_0.3-50mu.ktable.petitRADTRANS.h5}
-    #  - {species: H2O, path: ../opac_data/lbl/1H2-16O__POKAZATEL__R15000_0.3-50mu.xsec.TauREx.h5}
-   #   - {species: Na, path: ../opac_data/lbl/23Na__Kurucz-Na.R15000_0.3-50mu.xsec.TauREx.h5}
-   #   - {species: K, path: ../opac_data/lbl/39K__Kurucz-K.R15000_0.3-50mu.xsec.TauREx.h5} 
-
     - {species: H2O, path: ../opac_data/lbl/H2O_dnu_1.npz}
-    #- {species: Na, path: ../opac_data/lbl/Na_dnu_1.npz}
-   #- {species: K, path: ../opac_data/lbl/K_dnu_1.npz}
+    - {species: Na, path: ../opac_data/lbl/Na_dnu_1.npz}  
+    - {species: K, path: ../opac_data/lbl/K_dnu_1.npz}
+       #- {species: H2O, path: ../opac_data/ck/1H2-16O__POKAZATEL__R1000_0.3-50mu.ktable.petitRADTRANS.h5}
+       # - {species: Na, path: ../opac_data/ck/23Na__Kurucz-Na.R1000_0.3-50mu.ktable.petitRADTRANS.h5}
+       #- {species: K, path: ../opac_data/ck/39K__Kurucz-K.R1000_0.3-50mu.ktable.petitRADTRANS.h5}
+      #- {species: H2O, path: ../opac_data/lbl/1H2-16O__POKAZATEL__R15000_0.3-50mu.xsec.TauREx.h5}
+      #- {species: Na, path: ../opac_data/lbl/23Na__Kurucz-Na.R15000_0.3-50mu.xsec.TauREx.h5}
+      #- {species: K, path: ../opac_data/lbl/39K__Kurucz-K.R15000_0.3-50mu.xsec.TauREx.h5}        
 
   ray:
     - {species: H2}
@@ -49,29 +47,31 @@ opac:
 
 params:
 
-  - { name: R_s,   dist: delta,   value: 1.18655, transform: identity, init: 1.18655}
-  - { name: p_bot, dist: delta,   value: 10.0,  transform: identity, init: 10.0 }
-  - { name: p_top, dist: delta,   value: 1e-8, transform: identity, init: 1e-8}
-  - { name: log_g, dist: delta,   value: 3.0, transform: identity, init: 3.0}
-  #- { name: log_g, dist: uniform, low: 2.9,   high: 3.3,  transform: logit, init: 3.0}
 
+  - { name: R_s,   dist: delta,   value: 1.18655, transform: identity, init: 1.18655}
+  - { name: p_bot, dist: delta,   value: 100.0,  transform: identity, init: 100.0 }
+  - { name: p_top, dist: delta,   value: 1e-8, transform: identity, init: 1e-8}
+  - { name: M_p, dist: delta,   value: 0.69, transform: identity, init: 0.69}
+
+
+  - { name: log_10_p_ref, dist: uniform, low: -7,   high: 1.9,  transform: logit, init: 10.0}    
   - { name: R_p, dist: uniform, low: 1.1,   high: 1.5,  transform: logit, init: 1.4}
   - { name: T_iso, dist: uniform, low: 100.0,   high: 3000.0, transform: logit, init: 1500.0 }
-
+  
   - { name: log_10_f_H2O, dist: uniform, low: -8,   high: -2,  transform: logit, init: -5}
-  #- { name: log_10_f_Na, dist: uniform, low: -13,   high: -3,  transform: logit, init: -6}
-  #- { name: log_10_f_K, dist: uniform, low: -13,   high: -3,  transform: logit, init: -6}
+  - { name: log_10_f_Na, dist: uniform, low: -13,   high: -3,  transform: logit, init: -6}
+  - { name: log_10_f_K, dist: uniform, low: -13,   high: -3,  transform: logit, init: -6}
 
-  # - { name: f_cloud, dist: uniform, low: 0.0,   high: 1.0, transform: logit, init: 0.5}
-  # - { name: log_10_cld_r, dist: uniform, low: -3,   high: 2,  transform: logit, init: 0}
-  # - { name: cld_Q0, dist: uniform, low: 0.1,   high: 65,  transform: logit, init: 30.0}
-  # - { name: cld_a, dist: uniform, low: 3.0,   high: 7.0,  transform: logit, init: 4.0}
-  # - { name: log_10_cld_k0, dist: uniform, low: -13,   high: 13,  transform: logit, init: 0}
+  - { name: f_cloud, dist: uniform, low: 0.0,   high: 1.0, transform: logit, init: 0.5}
+  - { name: log_10_q_c, dist: uniform, low: -13,   high: 1,  transform: logit, init: 0}    
+  - { name: log_10_cld_r, dist: uniform, low: -3,   high: 2,  transform: logit, init: 0}
+  - { name: cld_Q0, dist: uniform, low: 0.1,   high: 65,  transform: logit, init: 30.0}
+  - { name: cld_a, dist: uniform, low: 3.0,   high: 7.0,  transform: logit, init: 4.0}
 
 
 sampling:
 
-  engine: blackjax_ns
+  engine: jaxns
 
   nuts:
     backend: numpyro
@@ -83,12 +83,12 @@ sampling:
   jaxns:
     # ---- core NS config ----
     max_samples: 100000          # hard cap on nested-sampling iterations
-    num_live_points: 1000         # live points (posterior resolution)
+    num_live_points: 100        # live points (posterior resolution)
 
     # Slice sampler hyperparameters
-    s: 4                         # slices per dimension (default ~4)
+    s: 6                         # slices per dimension (default ~4)
     k: 0                         # phantom samples (0 = off, >0 for hard posteriors)
-    c: null                      # parallel chains (null -> jaxns default, ~20*D)
+    c: null                       # parallel chains (null -> jaxns default, ~20*D)
     shell_fraction: 0.5          # fraction of shell explored per step (0<sf<=1)
 
     # Global behaviour flags
@@ -100,9 +100,9 @@ sampling:
 
     # ---- termination controls ----
     termination:
-      ess: 1000                        # target effective sample size
-      evidence_uncert: 0.01            # stop when σ_logZ < 0.3
-      dlogZ: 0.01                     # stop when remaining evidence small
+      ess: 10000                        # target effective sample size
+      evidence_uncert: null            # stop when σ_logZ < 0.3
+      dlogZ: 1.0                     # stop when remaining evidence small
       max_samples: 100000             # safety cap for samples
       max_num_likelihood_evaluations: null
       rtol: null
@@ -113,13 +113,13 @@ sampling:
     seed: 42                          # RNG seed for JAX
 
   blackjax_ns:
-    num_live_points: 200
-    num_inner_steps: 5
-    num_delete: 20
-    dlogz_stop: 1.0
+    num_live_points: 150
+    num_inner_steps: 50
+    num_delete: 75
+    dlogz_stop: 0
     seed: 42
 
 runtime:
-  platform: cpu           # cpu | gpu | cuda | metal
-  cuda_visible_devices: 1  # or "0,1"
+  platform: gpu           # cpu | gpu | cuda | metal
+  cuda_visible_devices: 0  # or "0,1"
   threads: 1
