--- a/experiments/HD189_Barstow_2020_trans_setup/retrieval_config.yaml
+++ b/experiments/HD189_Barstow_2020_trans_setup/retrieval_config.yaml
@@ -14,7 +14,7 @@ physics:
   vert_chem: constant_vmr
   vert_mu: dynamic
 
-  opac_line: ck
+  opac_line: lbl
   opac_ray: None
   opac_cia: None
   opac_cloud: powerlaw_cloud
@@ -23,18 +23,18 @@ physics:
 
 opac:
 
-  #wl_master: wl_dnu_1.txt
-  wl_master: wl_petitradtrans_R1000.txt
+  wl_master: wl_dnu_1.txt
+  #wl_master: wl_petitradtrans_R1000.txt
   #wl_master: wl_taurex_R15000.txt
   full_grid: False
-  ck: True
+  ck: False
   ck_mix: RORR
 
   line:
-    # - {species: H2O, path: ../../opac_data/lbl/H2O_dnu_1.npz}
+    - {species: H2O, path: ../../opac_data/lbl/H2O_dnu_1.npz}
     # - {species: Na, path: ../../opac_data/lbl/Na_dnu_1.npz}  
     # - {species: K, path: ../../opac_data/lbl/K_dnu_1.npz}
-       - {species: H2O, path: ../../opac_data/ck/1H2-16O__POKAZATEL__R1000_0.3-50mu.ktable.petitRADTRANS.h5}
+       #- {species: H2O, path: ../../opac_data/ck/1H2-16O__POKAZATEL__R1000_0.3-50mu.ktable.petitRADTRANS.h5}
        #- {species: Na, path: ../../opac_data/ck/23Na__Kurucz-Na.R1000_0.3-50mu.ktable.petitRADTRANS.h5}
        #- {species: K, path: ../../opac_data/ck/39K__Kurucz-K.R1000_0.3-50mu.ktable.petitRADTRANS.h5}
       #- {species: H2O, path: ../opac_data/lbl/1H2-16O__POKAZATEL__R15000_0.3-50mu.xsec.TauREx.h5}
