--- a/experiments/HD189_JWST_em_setup/retrieval_config.yaml
+++ b/experiments/HD189_JWST_em_setup/retrieval_config.yaml
@@ -47,7 +47,7 @@ params:
 
   - { name: R_s,   dist: delta,   value: 0.765, transform: identity, init: 0.765}
   - { name: p_bot, dist: delta,   value: 100.0,  transform: identity, init: 100.0 }
-  - { name: p_top, dist: delta,   value: 1e-6, transform: identity, init: 1e-6}
+  - { name: p_top, dist: delta,   value: 1e-8, transform: identity, init: 1e-8}
   - { name: log_10_p_ref, dist: delta,   value: 1.0, transform: identity, init: 1.0}
   - { name: f_hem, dist: delta,   value: 0.25, transform: identity, init: 0.25}
 
@@ -63,6 +63,12 @@ params:
   - { name: log_10_f_CO, dist: uniform, low: -9,   high: -1,  transform: logit, init: -5}
   - { name: log_10_f_CO2, dist: uniform, low: -9,   high: -1,  transform: logit, init: -5}
   - { name: log_10_f_CH4, dist: uniform, low: -9,   high: -1,  transform: logit, init: -5}
+
+    #- { name: f_cloud, dist: uniform, low: 0.0,   high: 1.0, transform: logit, init: 0.5}
+    #- { name: log_10_q_c, dist: uniform, low: -9,   high: 1,  transform: logit, init: 0}    
+    #- { name: log_10_cld_r, dist: uniform, low: -3,   high: 2,  transform: logit, init: 0}
+    #- { name: cld_Q0, dist: uniform, low: 0.1,   high: 65,  transform: logit, init: 30.0}
+    #- { name: cld_a, dist: uniform, low: 3.0,   high: 7.0,  transform: logit, init: 4.0}
 
   - { name: log_10_q_c_0, dist: uniform, low: -9,   high: 1,  transform: logit, init: 0}
   - { name: log_10_p_base, dist: uniform, low: -6,   high: 1,  transform: logit, init: 0}
@@ -115,7 +121,7 @@ sampling:
   jaxns:
     # ---- core NS config ----
     max_samples: 100000          # hard cap on nested-sampling iterations
-    num_live_points: 100        # live points (posterior resolution)
+    num_live_points: 500        # live points (posterior resolution)
 
     # Slice sampler hyperparameters
     s: 4                         # slices per dimension (default ~4)
@@ -134,7 +140,7 @@ sampling:
     termination:
       ess: 10000                        # target effective sample size
       evidence_uncert: null            # stop when σ_logZ < 0.3
-      dlogZ: 1.0                    # stop when remaining evidence small
+      dlogZ: 0.01                     # stop when remaining evidence small
       max_samples: 100000             # safety cap for samples
       max_num_likelihood_evaluations: null
       rtol: null
@@ -145,14 +151,14 @@ sampling:
     seed: 42                          # RNG seed for JAX
 
   blackjax_ns:
-    num_live_points: 250
-    num_inner_steps: 65
-    num_delete: 125
+    num_live_points: 175
+    num_inner_steps: 51
+    num_delete: 88
     dlogz_stop: -2
     seed: 42
     posterior_samples: 10000
 
 runtime:
-  platform: cpu           # cpu | gpu | cuda | metal
-  cuda_visible_devices: 0  # or "0,1"
+  platform: gpu           # cpu | gpu | cuda | metal
+  cuda_visible_devices: 1  # or "0,1"
   threads: 1
