--- a/experiments/Gliese_229B_em_setup/retrieval_config.yaml
+++ b/experiments/Gliese_229B_em_setup/retrieval_config.yaml
@@ -8,8 +8,8 @@ physics:
 
   nlay: 99
 
-  vert_Tp: Milne_2
-  vert_alt: p_ref
+  vert_Tp: Milne_modified
+  vert_alt: hypsometric_variable_g_pref
   vert_chem: constant_vmr
   vert_mu: dynamic
 
@@ -87,7 +87,7 @@ sampling:
   jaxns:
     # ---- core NS config ----
     max_samples: 100000          # hard cap on nested-sampling iterations
-    num_live_points: 100        # live points (posterior resolution)
+    num_live_points: 1000        # live points (posterior resolution)
 
     # Slice sampler hyperparameters
     s: 4                        # slices per dimension (default ~4)
@@ -99,14 +99,14 @@ sampling:
     difficult_model: false       # robust defaults for gnarly posteriors
     parameter_estimation: true   # tune for good posterior, not just evidence
     gradient_guided: false       # use gradients for proposals (only if stable)
-    init_efficiency_threshold: 0.1  # >0: initial uniform sampling until eff>thr
+    init_efficiency_threshold: 0.05  # >0: initial uniform sampling until eff>thr
     verbose: true               # print textual progress to CLI
 
     # ---- termination controls ----
     termination:
       ess: 10000                        # target effective sample size
       evidence_uncert: null            # stop when σ_logZ < 0.3
-      dlogZ: 1.0                     # stop when remaining evidence small
+      dlogZ: 0.1                     # stop when remaining evidence small
       max_samples: 100000             # safety cap for samples
       max_num_likelihood_evaluations: null
       rtol: null
