--- a/experiments/HD209_Barstow_2020_trans_setup/retrieval_config.yaml
+++ b/experiments/HD209_Barstow_2020_trans_setup/retrieval_config.yaml
@@ -60,7 +60,7 @@ params:
 
   - { name: log_10_g, dist: normal, mu: 3.0 , sigma: 0.3,  transform: logit, init: 3.0}
   - { name: R_p, dist: uniform, low: 1.1,   high: 1.5,  transform: logit, init: 1.4}
-  - { name: T_iso, dist: uniform, low: 100.0,   high: 3000.0, transform: logit, init: 1500.0 }
+  - { name: T_strat, dist: uniform, low: 100.0,   high: 3000.0, transform: logit, init: 1500.0 }
   
   - { name: log_10_f_H2O, dist: uniform, low: -8,   high: -2,  transform: logit, init: -5}
   - { name: log_10_f_Na, dist: uniform, low: -9,   high: -3,  transform: logit, init: -6}
@@ -90,7 +90,7 @@ sampling:
     num_live_points: 1000        # live points (posterior resolution)
 
     # Slice sampler hyperparameters
-    s: 6                         # slices per dimension (default ~4)
+    s: 4                         # slices per dimension (default ~4)
     k: 0                         # phantom samples (0 = off, >0 for hard posteriors)
     c: null                       # parallel chains (null -> jaxns default, ~20*D)
     shell_fraction: 0.5          # fraction of shell explored per step (0<sf<=1)
@@ -99,14 +99,14 @@ sampling:
     difficult_model: false       # robust defaults for gnarly posteriors
     parameter_estimation: true   # tune for good posterior, not just evidence
     gradient_guided: false       # use gradients for proposals (only if stable)
-    init_efficiency_threshold: 0.1  # >0: initial uniform sampling until eff>thr
+    init_efficiency_threshold: 0.05  # >0: initial uniform sampling until eff>thr
     verbose: true               # print textual progress to CLI
 
     # ---- termination controls ----
     termination:
       ess: 10000                        # target effective sample size
       evidence_uncert: null            # stop when σ_logZ < 0.3
-      dlogZ: 0.01                     # stop when remaining evidence small
+      dlogZ: 0.1                     # stop when remaining evidence small
       max_samples: 100000             # safety cap for samples
       max_num_likelihood_evaluations: null
       rtol: null
